llao llao bay picture

--- a/image-uploader/index.html
+++ b/image-uploader/index.html
@@ -11,7 +11,7 @@
 			<label>Title EN:</label><input name="titleEn" type="text"><br>
 			<label>Title ES:</label><input name="titleEs" type="text"><br>
 			<label>Pub Date:</label><input name="pubDate" type="date"><br>
-			<label>Filename:</label><input name="filename" type="text"><br>
+			<label>Filename:</label><input required name="filename" type="text"><br>
 			<button type="submit">Upload</button>
 		</form>
 
