--- a/image-uploader/index.html
+++ b/image-uploader/index.html
@@ -24,7 +24,7 @@
 					const formData = new FormData(this);
 
 					try {
-						const res = await fetch("http://localhost:3000/upload", {
+						const res = await fetch("http://thinkpadlo.local:3000/upload", {
 							method: "POST",
 							body: formData
 						});
