Change upload URL in index.html

--- a/image-uploader/index.html
+++ b/image-uploader/index.html
@@ -47,7 +47,7 @@
 					const formData = new FormData(this);
 
 					try {
-						const res = await fetch("http://thinkpadlo.local:3000/upload", {
+						const res = await fetch("http://apollo.local:3001/upload", {
 							method: "POST",
 							body: formData
 						});
